--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
         uses: repo-sync/github-sync@v2
         if: env.PAT
         with:
-          source_repo: "https://github.com/lxk0301/jd_scripts.git" #关键内容，对方github库信息
+          source_repo: "https://github.com/pangxiaohe1202/jd.git" #关键内容，对方github库信息
           source_branch: "master"
           destination_branch: "master"
           github_token: ${{ secrets.PAT }}
